tests/transpiler/x/scala/group_by.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/group_by.scala:7: error: ';' expected but 'for' found.
    val stats: ArrayBuffer[Map[String,Any]] = ({ var _groups = Map[Any, Map[String, Any]]() ; var _res = ArrayBuffer[Map[String,Any]]() ; for (person <- people) { val _key = person.city ; val _g = _groups.getOrElseUpdate(_key, Map("key" -> _key, "items" -> ArrayBuffer[Any]())) ; _g("items").asInstanceOf[ArrayBuffer[Any]].append(person) for (g <- _groups.values) { _res.append(Map("city" -> g("key"), "count" -> g("items").size, "avg_age" -> ({ var _res = ArrayBuffer[Any]() ; for (p <- g) { _res.append(p.age) }; _res }).sum / ({ var _res = ArrayBuffer[Any]() ; for (p <- g) { _res.append(p.age) }; _res }).size)) } ; _res })
                                                                                                                                                                                                                                                                                                                                                  ^
/workspace/mochi/tests/transpiler/x/scala/group_by.scala:7: error: ';' expected but ')' found.
    val stats: ArrayBuffer[Map[String,Any]] = ({ var _groups = Map[Any, Map[String, Any]]() ; var _res = ArrayBuffer[Map[String,Any]]() ; for (person <- people) { val _key = person.city ; val _g = _groups.getOrElseUpdate(_key, Map("key" -> _key, "items" -> ArrayBuffer[Any]())) ; _g("items").asInstanceOf[ArrayBuffer[Any]].append(person) for (g <- _groups.values) { _res.append(Map("city" -> g("key"), "count" -> g("items").size, "avg_age" -> ({ var _res = ArrayBuffer[Any]() ; for (p <- g) { _res.append(p.age) }; _res }).sum / ({ var _res = ArrayBuffer[Any]() ; for (p <- g) { _res.append(p.age) }; _res }).size)) } ; _res })
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  ^
/workspace/mochi/tests/transpiler/x/scala/group_by.scala:10: error: Missing closing brace `}' assumed here
    println(List(s.city, ": count =", s.count, ", avg_age =", s.avg_age).mkString(" "))
    ^
/workspace/mochi/tests/transpiler/x/scala/group_by.scala:12: error: ')' expected but '}' found.
  }
  ^
four errors found
